2014-10-26  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.7 released.

2014-10-24  Carl Hetherington  <cth@carlh.net>

	* Add a pause button for jobs.

	* Experimental support for bypassing colourspace conversion (#266).

	* Version 1.76.6 released.

2014-10-23  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.5 released.

2014-10-23  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.4 released.

2014-10-23  Carl Hetherington  <cth@carlh.net>

	* Rename 'Add folder' to 'Add image sequence'
	and add some tooltips.

	* Move the "keep video in sequence" button into
	the timeline dialogue.

	* Fix mix-placement of content when using the "Down"
	button to move it.

2014-10-22  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.3 released.

2014-10-22  Carl Hetherington  <cth@carlh.net>

	* Fix bug where some files from iTunes would
	be read as being at 90,000fps.

2014-10-20  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.2 released.

2014-10-19  Carl Hetherington  <cth@carlh.net>

	* Add simple note of what audio resampling
	will be done to the audio panel.

2014-10-16  Carl Hetherington  <cth@carlh.net>

	* Version 1.75.2 released.

2014-10-16  Carl Hetherington  <cth@carlh.net>

	* Version 1.75.1 released.

2014-10-16  Carl Hetherington  <cth@carlh.net>

	* Version 1.75.0 released.

2014-10-14  Carl Hetherington  <cth@carlh.net>

	* Version 1.74.3 released.

2014-10-08  c.hetherington  <cth@carlh.net>

	* Make server finding more reliable when
	there are more than a few servers.

2014-10-08  Carl Hetherington  <cth@carlh.net>

	* Version 1.74.2 released.

2014-10-08  Carl Hetherington  <cth@carlh.net>

	* Version 1.74.1 released.

2014-10-05  Carl Hetherington  <cth@carlh.net>

	* Bump ffmpeg version.

2014-10-06  Carl Hetherington  <cth@carlh.net>

	* Version 1.74.0 released.

2014-10-06  Carl Hetherington  <cth@carlh.net>

	* Version 1.73.9 released.

2014-09-28  Carl Hetherington  <cth@carlh.net>

	* Version 1.73.8 released.
