@@ -565,8 +565,18 @@ FFmpegDecoder::setup_subtitle ()
 bool
 FFmpegDecoder::done () const
 {
-	bool const vd = !_decode_video || (_video_position >= _ffmpeg_content->video_length());
-	bool const ad = !_decode_audio || !_ffmpeg_content->audio_stream() || (_audio_position >= _ffmpeg_content->audio_length());
+	shared_ptr<const Film> film = _film.lock ();
+	assert (film);
+
+	Time const vp = film->video_frames_to_time (_video_position);
+	Time const ap = film->audio_frames_to_time (_audio_position);
+	
+	bool const vd = !_decode_video ||
+		((vp - _ffmpeg_content->trim_start()) >= _ffmpeg_content->length_after_trim ());
+	
+	bool const ad = !_decode_audio || !_ffmpeg_content->audio_stream() ||
+		((ap - _ffmpeg_content->trim_start()) >= _ffmpeg_content->length_after_trim ());
+	
 	return vd && ad;
 }
 	
