@@ -1,3 +1,8 @@
+2014-10-31  Carl Hetherington  <cth@carlh.net>
+
+	* Fix for hangs at 99% when encoding
+	trimmed content.
+
 2014-10-26  Carl Hetherington  <cth@carlh.net>
 
 	* Version 1.76.7 released.
